# dependabot-demo

python/: requirements.txt  setup.cfg
