

[metadata]
name = X.common
description = X Common
long_description = file: README.md
version = attr: X.common.__version__
author = doWhile
author_email = info@xyz
keywords = X, common
url = ""
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: Other/Proprietary License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
install_requires = 
	PyYAML>=5.4.1
	arrow==1.1.0
	pycryptodome>=3.10.1
	pyhumps==3.8.0
	regex>=2021.4.4

[options.packages.find]
include = 
	X.*

[bdist_wheel]
universal = 1
